# pricai_monkey

./: .gitignore  README.md  pyproject.toml
data/: contracts.json  episodes.jsonl
data/pact100_legacy/: contracts.json  episodes.jsonl  splits.json
data/pact_causal_520/: contracts.json  episodes.jsonl  splits.json
hypothesis_laundered_memory_pilot/: .env.example  .gitignore  README.md  requirements.txt  run_pilot.py
outputs/: audit_baselines.md  audit_causality.md  audit_d3.md  audit_dataset.md  audit_metrics.md  audit_pact_s.md  audit_r2.md  audit_report.md  audit_reproducibility.md  audit_research_value.md  bootstrap_ci.json  composition_ablation.csv  conflict_taxonomy.csv  d3_error_transition.csv  d3_fixed_errors.csv  d3_new_errors.csv  diagnostic_summary.csv  errors_pact.csv  errors_strongest_baseline.csv  learned_pam_errors.csv  learned_pam_feature_report.json  learned_pam_results.csv  manual_audit_completed_template.csv  manual_audit_d3_template.csv  manual_audit_pact_s_template.csv  manual_audit_r2_template.csv  manual_audit_sample.csv  mcnemar_tests.json  method_differences.csv  metrics.json  metrics_by_case_type.csv  metrics_by_family.csv  metrics_by_set_type.csv  metrics_main.json  multi_contract_stress.csv  naturalistic_failures.csv  naturalistic_metrics.csv  oracle_ceiling.csv  pact_s_best_config.json  pact_s_broad_contract_traps.csv  (+61 more)
src/pact/: __init__.py  audits.py  (+9 more)
tests/: test_baselines.py  test_d3.py  test_dataset.py  test_outputs.py  test_pact.py  test_pact_s.py  test_r2.py  test_sanity.py  test_schema.py  test_scoring.py  test_stats.py
(+63 files in other folders)
