[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pact-pilot"
version = "0.1.0"
description = "Offline pilot for Prospective Action Contracts in LLM agents."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
data = ["pandas>=2", "scikit-learn>=1.4"]

[tool.setuptools.packages.find]
where = ["src"]

